force-app/main/default/objects/Seguimiento_Etapas_Pyatz__c/Seguimiento_Etapas_Pyatz__c.object-meta.xml
<CustomObject>
    <description>Registra el historial de estados por cada sub-etapa del proceso 360 de Pyatz.</description>
    <label>Seguimiento de Etapa Pyatz</label>
    <nameField>
        <displayFormat>SEG-{00000}</displayFormat>
        <label>Folio Seguimiento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seguimientos de Etapas Pyatz</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>