force-app/main/default/objects/Seguimiento_Etapas_Pyatz__c/fields/Clave_Unica__c.field-meta.xml
<CustomField>
    <fullName>Clave_Unica__c</fullName>
    <caseSensitive>false</caseCaseSensitive>
    <description>ID_Oportunidad + Etapa + Subetapa. Asegura un único registro de estado por hito.</description>
    <externalId>true</externalId>
    <label>Clave Única</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>