force-app/main/default/objects/Seguimiento_Etapas_Pyatz__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Seguimientos de Etapas Pyatz</relationshipLabel>
    <relationshipName>Seguimientos_de_Etapas_Pyatz</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>