force-app/main/default/objects/Seguimiento_Etapas_Pyatz__c/fields/Subetapa__c.field-meta.xml
<CustomField>
    <fullName>Subetapa__c</fullName>
    <label>Subetapa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>